took away booking link, fixed footer on index page to full width, aligned footer content

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,6 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(242, 241, 245, 0.986);
-  //margin-top: 15px;
 }
 .footer-links {
   display: flex;
@@ -27,14 +26,9 @@
   color: #D23333;
 }
 
-.footer-about {
-  align-items: center;
-  font-size: 16px;
-  color:rgb(251, 244, 244);
-}
 
 .page-container {
-  //min-height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -42,3 +36,9 @@
 .footer-links a i {
   color: rgb(30, 2, 26);
 }
+
+.footer-about {
+  font-size: 16px;
+  color:rgb(251, 244, 244);
+  margin-bottom: 0!important;
+  }
